--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-   "homepage": "https://yourusername.github.io/my-react-app22",
+   "homepage": "",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
